# synced-state-example

./: .prettierrc  README.md  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  state.rs
src/lib/: bindings.ts  state.svelte.ts
src/routes/: +page.svelte
